--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,10 +6,12 @@
     <script th:src="@{/js/bootstrap.min.js}"></script>
 </head>
 
+<body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="header">
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/}">Wisdom Book</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -26,8 +28,6 @@
             </ul>
         </div>
     </div>
-</nav>
-
 </nav>
 </body>
 </html>
